@@ -7,7 +7,10 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-
+/**
+ *
+ * @author Usuario
+ */
 public class UsuarioPrincipal implements UserDetails {
 
     private String nombre;
@@ -17,7 +20,6 @@ public class UsuarioPrincipal implements UserDetails {
     private Collection<? extends GrantedAuthority> authorities;
 
     //Constructor
-    
     public UsuarioPrincipal(String nombre, String nombreUsuario, String email, String password, Collection<? extends GrantedAuthority> authorities) {
         this.nombre = nombre;
         this.nombreUsuario = nombreUsuario;
@@ -28,12 +30,10 @@ public class UsuarioPrincipal implements UserDetails {
 
     public static UsuarioPrincipal build(Usuario usuario) {
         List<GrantedAuthority> authorities = usuario.getRoles().stream()
-                .map(rol -> new SimpleGrantedAuthority(rol.getRolNombre()
-                .name())).collect(Collectors.toList());{
+                .map(rol -> new SimpleGrantedAuthority(rol.getRolNombre().name())).collect(Collectors
+                .toList());
         return new UsuarioPrincipal(usuario.getNombre(), usuario.getNombreUsuario(), usuario.getEmail(),
                  usuario.getPassword(), authorities);
-    }
-
     }
 
     @Override
@@ -54,7 +54,6 @@ public class UsuarioPrincipal implements UserDetails {
         return email;
     }
 
-   
     @Override
     public String getUsername() {
         return nombreUsuario;
@@ -68,18 +67,16 @@ public class UsuarioPrincipal implements UserDetails {
     @Override
     public boolean isAccountNonLocked() {
         return true;
-
     }
 
     @Override
     public boolean isCredentialsNonExpired() {
         return true;
-
     }
 
     @Override
     public boolean isEnabled() {
         return true;
-
     }
+
 }
